// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatBubble user and assistant turns render distinct alignment: assistant-bubble 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "alignSelf": "flex-start",
          "backgroundColor": "rgb(247, 243, 249)",
          "borderRadius": 12,
          "marginVertical": 4,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 3,
        }
      }
      testID="surface-outer-layer"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "rgb(247, 243, 249)",
            "borderRadius": 12,
            "flex": undefined,
            "maxWidth": "85%",
            "padding": 10,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 1,
          }
        }
        testID="surface"
      >
        <Text
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "System",
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              {
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          返答
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`ChatBubble user and assistant turns render distinct alignment: user-bubble 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "alignSelf": "flex-end",
          "backgroundColor": "rgb(247, 243, 249)",
          "borderRadius": 12,
          "marginVertical": 4,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 3,
        }
      }
      testID="surface-outer-layer"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "rgb(247, 243, 249)",
            "borderRadius": 12,
            "flex": undefined,
            "maxWidth": "85%",
            "padding": 10,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 1,
          }
        }
        testID="surface"
      >
        <Text
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "System",
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              {
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          質問
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
